--- a/index.html
+++ b/index.html
@@ -30,8 +30,17 @@
             <button id="next-btn">Next Question</button>
         </div>
     </div>
+    <!-- -------congulation----------- -->
 
-    
+    <div id="congulate-winner">
+        <img src="./congratulations-congrats.gif" alt="" width="180px">
+    </div>
+    <div id="congulate-loser">
+        <img id="loser" src="./giphy-unscreen.gif" alt="" width="180px">
+    </div>
+
+
+
 
     <script src="script.js"></script>
 </body>
